overflow, position fixed added in ..root

--- a/src/components/navbar/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/navbar/HamburgerMenu/HamburgerMenu.css
@@ -36,3 +36,8 @@
     transition-timing-function: ease-in-out;
     transition: all 0.5s;
 }
+
+.root {
+    overflow: hidden;
+    position: fixed;
+}
